--- a/assessment2.html
+++ b/assessment2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assessment2.css">
 </head>
 <body>
-    <h1>あなたのいいところ診断</h1>
+    <h1>あなた様のいいところを診断します</h1>
     <p>診断したい名前を入力してね！</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
